prince_code/production-travelmemory-frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: travelmemory-frontend
  namespace: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: travelmemory-frontend
  template:
    metadata:
      labels:
        app: travelmemory-frontend
    spec:
      containers:
      - name: travelmemory-frontend
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: frontend-build
          mountPath: /usr/share/nginx/html
      volumes:
      - name: frontend-build
        emptyDir: {}
