prince_code/travelmemory-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: travelmemory-backend
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: travelmemory-backend
  template:
    metadata:
      labels:
        app: travelmemory-backend
    spec:
      containers:
      - name: travelmemory-backend
        image: node:14
        workingDir: /app
        command: ["/bin/bash", "-c"]
        args:
        - |
          echo "Cloning TravelMemory repository..."
          git clone https://github.com/XXRadeonXFX/TravelMemory.git /app
          
          echo "Installing dependencies..."
          cd /app/backend
          npm install
          node index.js
          
#          echo "Starting backend application..."
#          npm start
        ports:
        - containerPort: 3001
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
