prince_code/travelmemory-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: travelmemory-frontend-service
  namespace: frontend
spec:
  selector:
    app: travelmemory-frontend
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
